--- a/src/containers/webview/FestivalProgramContainer/FestivalProgramListItem.css
+++ b/src/containers/webview/FestivalProgramContainer/FestivalProgramListItem.css
@@ -1,11 +1,13 @@
 
 .inverse{
  
-  background-color: #78909C;
+  background-color: #37474F;
   color: white;
   border-radius: 2px;
-  padding:2px 5px;
+  padding:0px 5px;
   font-weight: 100;
+  margin: 3px 3px;
+  box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
 
 }
 
@@ -56,4 +58,135 @@ a {
   text-decoration: none;
   color: #FFB74D;
   cursor: pointer;
+}
+
+body {
+  font-family: 'Lato', sans-serif!important;
+  font-weight: 300;
+}
+
+
+.container{
+  padding: 90px 0;
+  font-family: 'Lato', sans-serif!important;
+
+
+}
+
+.listItemContainer{
+  width:100%;
+  margin: 15px 0;
+  overflow:hidden;
+  background-color: black;
+  box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  background-size: cover;
+  background-position: center center;
+  
+}
+
+
+
+.title {
+  color:white;
+  position: relative;
+  top: 8px;
+  left: 16px;
+
+  font-size: 120%;
+  width:80%;
+}
+
+.country {
+  color:white;
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  
+  font-size: 120%;
+}
+
+.stage {
+  background-color: #37474F;
+  color: white;
+  border-radius: 2px;
+  position: absolute;
+  top: 84px;
+  left: 16px;
+  padding:4px;
+  
+  font-size: 100%;
+}
+.iconButtonRoot{
+  padding:0!important;
+  width: 35px;
+  height: 35px;
+}
+.starIcon {
+  color:white;
+  position: absolute;
+  top: 43px;
+  right: 11px;
+  opacity:0.6;
+}
+
+.details {
+  color:white;
+  position: relative;
+  bottom: 0px;
+  margin-top:125px;
+  margin-bottom:50px;
+  left:0px;
+  overflow: hidden;
+  width:100%;
+  transition: all 0.3s ease-in-out;
+  background-color: rgba(160, 7, 7, 0.4);
+;}
+
+.detailsHeader{
+  font-size: 120%;
+  padding:16px;
+}
+
+.detailsContent {
+
+ 
+  line-height: 170%;
+  padding:16px;
+  display:flex;
+  justify-content: space-evenly;
+
+
+}
+  
+.detailsContentGenre {
+
+ 
+  line-height: 170%;
+  padding:16px;
+  display:flex;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+
+
+}
+  
+
+.detailsIcon {
+  color:white;
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-weight: 100;
+  font-size: 120%;
+}
+
+.backdropLayer{
+  position: absolute;
+  background-color: rgba(0,0,0,0.4);
+  width: 100%;
+  height:100%;
+  top:0;
+
 }
