--- a/src/containers/webview/Discover/DiscoverContainer.css
+++ b/src/containers/webview/Discover/DiscoverContainer.css
@@ -4,6 +4,19 @@
 
 }
 
+.inverse{
+ 
+  background-color: #37474F;
+  color: white;
+  border-radius: 2px;
+  padding:0px 5px;
+  font-weight: 100;
+  margin: 3px 3px;
+  box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
+
+}
+
+
 .listItemContainer{
   width:100%;
   margin: 15px 0;
@@ -46,9 +59,9 @@
   left:0px;
   overflow: hidden;
   width:100%;
-  transition: all 0.3s ease-in-out;
+ // transition: all 0.3s ease-in-out;
   background-color: rgba(0,0,0,0.6);
-;}
+}
 
 .detailsHeader{
 
@@ -64,7 +77,18 @@
 
 }
   
+.detailsContentGenre {
 
+ 
+  line-height: 170%;
+  padding:16px;
+  display:flex;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+  font-size: 100%;
+
+}
+  
 
 .detailsIcon {
   color:white;
@@ -85,6 +109,15 @@
 
 }
 
+.centerCenter{
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height:100%;
+  text-align: center;
+  font-size: 130%;
+}
+
 li {
   margin:10px 0;
   padding:5px 0;
@@ -103,7 +136,7 @@ li {
   display:inline-block;
   background-color: rgba(245,245,245,0.8);
   margin-left: 5px;
-  padding:5px 10px;
+  padding:3px 8px;
   text-align: center;
 }
 .CalendarRow{
