--- a/src/containers/webview/FestivalBrowser/festivalListItem.css
+++ b/src/containers/webview/FestivalBrowser/festivalListItem.css
@@ -49,3 +49,153 @@ a {
   color: #FFB74D;
   cursor: pointer;
 }
+
+
+
+body {
+  font-family: 'Lato', sans-serif!important;
+  font-weight: 300;
+}
+
+
+.container{
+  padding: 90px 0;
+  font-family: 'Lato', sans-serif!important;
+
+
+}
+
+.listItemContainer{
+  width:100%;
+  margin: 15px 0;
+  overflow:hidden;
+  background-color: black;
+  box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+
+
+}
+
+.backgroundContainer{
+  position:absolute;
+  top:0;
+  bottom:0;
+  right:0;
+  left:0;
+  transition: all 0.3s ease-in-out;
+  background-size: cover;
+  background-position: center center;
+  
+}
+
+
+.title {
+  color:white;
+  position: relative;
+  top: 8px;
+  left: 16px;
+
+  font-size: 130%;
+  width:80%;
+}
+
+.country {
+  color:white;
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  
+  font-size: 110%;
+}
+
+.stage {
+  background-color: #37474F;
+  color: white;
+  border-radius: 2px;
+  position: absolute;
+  top: 88px;
+  left: 16px;
+  padding:2px 4px;
+  box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
+  
+  font-size: 90%;
+}
+.iconButtonRoot{
+  padding:0!important;
+  width: 35px;
+  height: 35px;
+  background-color: rgba(70, 86, 96, 0.8)!important;
+  border-radius: 50%;
+  
+}
+.starIcon {
+  color:white;
+  position: absolute;
+  top: 43px;
+  right: 11px;
+  opacity:0.9;
+}
+
+
+.details {
+  color:white;
+  position: relative;
+  bottom: 0px;
+  margin-top:105px;
+  margin-bottom:42px;
+  left:0px;
+  overflow: hidden;
+  width:100%;
+  transition: all 0.3s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.4);
+ 
+;}
+
+.detailsHeader{
+  font-size: 120%;
+  padding:16px;
+}
+
+.detailsContent {
+
+ 
+  line-height: 170%;
+  padding:16px;
+  display:flex;
+  justify-content: space-evenly;
+  font-size: 90%;
+
+
+}
+  
+.detailsContentGenre {
+
+ 
+  line-height: 170%;
+  padding:16px;
+  display:flex;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+  font-size: 90%;
+
+}
+  
+
+.detailsIcon {
+  color:white;
+  position: absolute;
+  bottom: 5px;
+  right: 16px;
+  font-weight: 100;
+  font-size: 120%;
+}
+
+.backdropLayer{
+  position: absolute;
+  background-color: rgba(0,0,0,0.3);
+  width: 100%;
+  height:100%;
+  top:0;
+
+}
