--- a/src/containers/webview/Discover/DiscoverContainer.css
+++ b/src/containers/webview/Discover/DiscoverContainer.css
@@ -24,7 +24,7 @@
   background-color: black;
   box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
   position: relative;
-  transition: all 0.3s ease-in-out;
+  transition: none;
   background-size: cover;
   background-position: center center;
   
