--- a/src/containers/webview/FestivalBrowser/festivalListItem.css
+++ b/src/containers/webview/FestivalBrowser/festivalListItem.css
@@ -72,7 +72,7 @@ body {
   background-color: black;
   box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
   position: relative;
-  transition: all 0.3s ease-in-out;
+  transition: none;
 
 
 }
