--- a/src/containers/webview/FestivalProgramContainer/FestivalProgramListItem.css
+++ b/src/containers/webview/FestivalProgramContainer/FestivalProgramListItem.css
@@ -89,7 +89,7 @@ body {
   background-color: black;
   box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
   position: relative;
-  transition: all 0.3s ease-in-out;
+  transition: none;
   background-size: cover;
   background-position: center center;
   
