--- a/src/containers/webview/Discover/DiscoverContainer.css
+++ b/src/containers/webview/Discover/DiscoverContainer.css
@@ -157,3 +157,12 @@ li {
   display:inline-block;
   padding:0 10px;
 }
+
+.scrollToTopButton{
+  z-index: 100;
+
+  background-color: rgba(55, 71, 79, 0.6);
+  color:white;
+  border-radius: 50%;
+  padding: 15px;
+}
