--- a/src/hoc/ui/ContentBlockContainer.css
+++ b/src/hoc/ui/ContentBlockContainer.css
@@ -1,9 +1,16 @@
 .container{
   width: 100%;
-  min-height: 600px;
+  min-height: 200px;
   padding:100px 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+
+  
+
+  overflow:hidden;
+  transition: all 0.3s ease-in-out;
+  background-size: cover;
+  background-position: top center;
 }
