new browser UI added progressbar added active festival redirect

--- a/src/components/StageSwitcher.css
+++ b/src/components/StageSwitcher.css
@@ -86,7 +86,7 @@
   display: inline-block;
   margin: 1px;
   padding: 10px 15px;
-  
+  font-size: 120%;
   width:60%;
   margin: 0 auto;
   margin-bottom: 1px;
