--- a/src/containers/webview/FestivalProgramContainer/FestivalProgramContainer.css
+++ b/src/containers/webview/FestivalProgramContainer/FestivalProgramContainer.css
@@ -1,5 +1,5 @@
 .container{
-  padding-top: 70px;
+  
   padding-bottom: 200px;
 
 }
@@ -76,4 +76,13 @@
   bottom: 100px !important;
   right: 30px;
 
+}
+
+.cover{
+  padding-top: 70px;
+  padding-bottom: 10px;
+  margin-bottom: 5px;
+  background-size: cover;
+  background-position: center center;
+  background-color: rgba(70, 86, 96, 0.8)!important;
 }
