--- a/src/containers/webview/FestivalProgramContainer/FestivalProgramListItem.css
+++ b/src/containers/webview/FestivalProgramContainer/FestivalProgramListItem.css
@@ -128,6 +128,36 @@ body {
   
   font-size: 90%;
 }
+
+
+
+.progressBar{
+  position: absolute;
+  top: 112px;
+  left: 0px;
+  height:6px;
+  width:0px;
+  background-color: rgb(255, 0, 0);
+}
+
+.onAir{
+  background-color: rgb(199, 9, 9);
+  color: white;
+  border-radius: 2px;
+  position: absolute;
+  top: 50px;
+  left: 16px;
+  padding:2px 4px;
+  box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
+  
+  font-size: 90%;
+}
+
+.startsIn{
+  background-color: rgb(16, 177, 96);
+ 
+}
+
 .iconButtonRoot{
   padding:0!important;
   width: 35px;
