added header for discover css tweaks for search bar

--- a/src/containers/webview/Discover/DiscoverContainer.css
+++ b/src/containers/webview/Discover/DiscoverContainer.css
@@ -1,5 +1,5 @@
 .container{
-  padding: 20px 0;
+
   padding-bottom: 300px;
 
 
@@ -134,6 +134,21 @@ li {
   
 }
 
+.searchBarBackground{
+  width:100%;
+  background-color: rgb(109, 131, 172);
+  padding-top:30px;
+  padding-bottom: 15px;
+}
+
+.listTitle{
+  padding:20px 20px;
+
+  font-weight: 300;
+  font-size: 140%;
+  display: block;
+  border-bottom: 1px #ddd solid;
+}
 
 .CalendarContainer{
   float: left;
