--- a/src/containers/webview/Discover/DiscoverContainer.css
+++ b/src/containers/webview/Discover/DiscoverContainer.css
@@ -18,6 +18,20 @@
 }
 
 
+.genreItem{
+ 
+  background-color: rgb(98, 102, 104);
+  color: white;
+  border-radius: 20px;
+  padding:1px 20px;
+  font-weight: 100;
+  margin: 5px 3px;
+  //box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5) ;
+  display: inline-block;
+
+}
+
+
 .listItemContainer{
   width:100%;
   margin: 15px 0;
@@ -143,7 +157,7 @@ li {
 
 .listTitle{
   padding:20px 20px;
-
+padding-top: 10px;
   font-weight: 300;
   font-size: 140%;
   display: block;
