--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: 'Lato', sans-serif!important;
+  font-family: 'Nunito', sans-serif!important;
 }
 
 body{
