--- a/src/containers/webview/Zerking/ZerkingContainer.css
+++ b/src/containers/webview/Zerking/ZerkingContainer.css
@@ -1,18 +1,20 @@
 .container{
  overflow: hidden;
+ background-color: #eee;
 }
 
 .button {
 	order: 3;
   margin: 50px;
-  background-color: rgb(229, 0, 88);
+	background-color: rgb(229, 0, 88);
+
   text-align: center;
   width: 90%;
   margin:10px auto;
 	padding: 10px 10px;
 	font-size: 150%;
 	color: white;
-	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
 	border-radius: 3px;
 	font-weight: 100;
 	cursor: pointer;
