--- a/src/containers/webview/FestivalBrowser/festivalListItem.css
+++ b/src/containers/webview/FestivalBrowser/festivalListItem.css
@@ -123,17 +123,18 @@ body {
 }
 .iconButtonRoot{
   padding:0!important;
-  width: 35px;
-  height: 35px;
+  width: 80px;
+  height: 80px;
   background-color: rgba(70, 86, 96, 0.8)!important;
   border-radius: 50%;
+
   
 }
 .starIcon {
   color:white;
-  position: absolute;
-  top: 43px;
-  right: 11px;
+
+  width:75px;
+  margin:0 auto;
   opacity:0.9;
 }
 
