--- a/src/containers/webview/Zerking/ZerkingContainer.css
+++ b/src/containers/webview/Zerking/ZerkingContainer.css
@@ -1,25 +1,22 @@
 .container{
  overflow: hidden;
- background-color: #eee;
+ background-color: #2c2c2c;
 }
 
 .button {
 	order: 3;
   margin: 50px;
-	background-color: rgb(229, 0, 88);
+	background-color: rgb(220, 220, 220);
 
   text-align: center;
   width: 90%;
   margin:10px auto;
 	padding: 10px 10px;
 	font-size: 150%;
-	color: white;
+	columns: #2c2c2c;
 	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
 	border-radius: 3px;
 	font-weight: 100;
 	cursor: pointer;
-}
-.button:hover {
-	background-color: rgb(221, 62, 97);
 }
 
